tests/bad_programs/syntax_errors/while_while_true.notc
int main() {
    while (while(true){}) {
    }
}
